# haskell-crossref-api

./: .gitignore  CHANGELOG.md  README.md  crossref.cabal  shell.nix
exec/: Main.hs
src/: Crossref.hs
src/Crossref/Internal/: API.hs  Env.hs
test/: Test.hs
testdata/: query_hippocampal_place_cells.json  works_10.1101_2020.08.17.253575.json
