cabal-version:       2.4
name:                crossref
version:             0.1.0.0
synopsis:            Bindings to the Crossref API
description:         Bindings and types for interacting with the
                     Crossref API (see https://www.crossref.org/education/retrieve-metadata/rest-api/)
                     for API documentation.
bug-reports:         https://github.com/imalsogreg/haskell-crossref-api/issues
license:             BSD-3-Clause
license-file:        LICENSE.md
author:              Greg Hale
maintainer:          imalsogreg@gmail.com
copyright:           2021 Greg Hale
-- category:
extra-source-files:  CHANGELOG.md, README.md
data-files: testdata/*.json

library
  exposed-modules:     Crossref
                       Crossref.Internal.Env
                       Crossref.Internal.API
                       Paths_crossref
  build-depends:       base >=4.10.0.0 && < 4.15
                     , aeson
                     , bytestring
                     , containers
                     , hashable
                     , http-api-data
                     , http-client
                     , http-client-tls
                     , loglevel
                     , lrucaching
                     , network-uri
                     , text
                     , time
                     , vector
  hs-source-dirs:      src
  default-language:    Haskell2010

executable haskell-crossref-api
  main-is:             Main.hs
  build-depends:       base, text, aeson, bytestring, crossref
  hs-source-dirs:      exec
  default-language:    Haskell2010

test-suite test
  type: exitcode-stdio-1.0
  hs-souce-dir: test
  main-is: test/Test.hs
  other-modules: Paths_crossref
  build-depends:
        base
    , aeson
    , bytestring
    , crossref
    , filepath
    , tasty
    , tasty-hunit
